<resources>
    <string name="app_name">我要海淘</string>
    <string name="title_login">登录我要海淘</string>
    <string name="title_terms_of_use">服务条款</string>
    <string name="title_privacy_policy">隐私条款</string>
    <string name="title_mail_resend">重新发送确认邮件</string>
    <string name="title_blank"> </string>
    <string name="title_profile">我的账户</string>
    <string name="title_home_buyer">当个代购</string>
    <string name="tit_chat_detail"></string>
    <string name="form_login_email">电子邮箱地址</string>
    <string name="form_password">密码</string>
    <string name="form_btn_login">登录</string>
    <string name="register">注册新账户</string>
    <string name="form_forget_password">忘记密码?</string>
    <string name="form_no_confirm_email_received">没有收到确认邮件?</string>
    <string name="instruction_register">在注册的同时您已同意我要海淘的\n</string>
    <string name="of_term">的</string>
    <string name="btn_term">服务政策</string>
    <string name="with_condition">和</string>
    <string name="btn_condition">隐私条款</string>
    <string name="form_bn_active_mail">好的</string>
    <string name="form_username">昵称</string>
    <string name="form_email">电子邮箱地址</string>
    <string name="form_resend_email">电子邮箱必填</string>
    <string name="form_forget_password_page">请输入您注册过的电子邮件地址</string>
    <string name="form_confirm_password">确认密码</string>
    <string name="form_login_description">几分钟后，您将收到确认帐\n号的电子邮件.</string>
    <string name="to_login_page">登陆</string>
    <string name="form_btn_register">注册</string>
    <string name="form_btn_register_login">已注册用户登陆</string>
    <string name="form_btn_resend_email">重新发送确认邮件</string>
    <string name="form_btn_resend_email_to_register">已注册用户登录</string>
    <string name="form_btn_send_forget_password">请给我发送重设密码的邮件</string>
    <string name="form_btn_confirm">确认</string>
    <string name="delivery_method_hint">买家选择的运送方式 \n1. 快速邮递 \n2. 普通邮递</string>
    <string name="form_check_terms">
        <![CDATA[
            在注册的同时您已同意我要海淘<br/>的<a href="terms" style="color:#be262a;">服务政策</a>和<a href="policy"  style="color:#be262a;">隐私条款</a>
        ]]>
    </string>
    <string-array name="america_group">
        <item>美国</item>
        <item>加拿大</item>
    </string-array>
    <string-array name="euro_group">
        <item>德国</item>
        <item>西班牙</item>
        <item>英国</item>
        <item>瑞士</item>
        <item>法国</item>
        <item>意大利</item>
    </string-array>
    <string-array name="autralia_group">
        <item>澳大利亚</item>
        <item>新西兰</item>
        <item>斐济</item>
    </string-array>
    <string-array name="asia_group">
        <item>新加坡</item>
        <item>马来西亚</item>
        <item>台湾地区</item>
        <item>日本</item>
        <item>泰国</item>
        <item>越南</item>
        <item>澳门地区</item>
        <item>韩国</item>
        <item>印度尼西亚</item>
        <item>中国</item>
        <item>香港地区</item>
    </string-array>
    <string name="america">美洲</string>
    <string name="asia">亚洲</string>
    <string name="europe">欧洲</string>
    <string name="aus">大洋洲</string>
    <string name="other">其他地区</string>
    <string name="middleeast">中东地区</string>
    <string name="all">全部国家</string>
    <string name="form_lastname">姓</string>
    <string name="form_firstname">名</string>
    <string name="form_email_profile">电邮地址</string>
    <string name="form_telephone_profile">联络电话</string>
    <string name="form_country">当所在国家</string>
    <string name="form_current_password">当前密码</string>
    <string name="form_alipay_user_name">支付宝账户的实名</string>
    <string name="form_alipay_register_name">支付宝账户</string>
    <string name="form_new_password">新密码</string>
    <string name="form_profile_confirm_password">确认新密码</string>
    <string name="form_product_spinner_hint">产品所在国家</string>
    <string-array name="form_product_edit_spinner">
        <item>产品所在国家</item>
    </string-array>
    <string name="form_prfile_edit_spinner_hint">当所在国家</string>
    <string-array name="form_profile_edit_spinner">
        <item>当所在国家</item>
    </string-array>
    <string name="content_privacy_policy">服务条款服务条款服务条款服务封确认邮件已经发至您的邮箱，请点击其中的链接激活您的账号。条款服务条款服务条款服务条款款服务条款服务条款服务条款务条款服务条款款服务条款封确认邮件已经发至您的邮箱，请点击其中的链接激活您的账号。服务条款服务条款服务条款服务服务条款服务条封确认邮件已经发至您的邮箱，请点击其中的链接激活您的账号。款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条</string>
    <string name="content_terms_of_use">服务条款服务条款服务条款服务条款服务条款服务条款服务条封确认邮件已经发至您的邮箱，请点击其中的链接激活您的账号。款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款封确认邮件已经发至您的邮箱，请点击其中的链接激活您的账号。服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条</string>
    <string name="btn_return">返回</string>
    <string name="btn_save_changes">确认并支付</string>
    <string name="save_address">确定</string>
    <string name="btn_advertise_purchase">浏览广告</string>
    <string name="btn_advertise_buyer">发布广告</string>
    <string name="btn_save_Eva">确定</string>
    <string name="content_mail_active">一封确认邮件已经发至您的邮箱，请点击其中的链接激活您的账号。</string>
    <string name="txt_wait_send_mail">几分钟后，您将收到确认帐\n号的电子邮件.</string>
    <string name="txt_change_password">更改我的密码</string>
    <string name="txt_title_alipay">我的支付宝账户信息</string>
    <string name="txt_alipay_section">更改我的密码</string>
    <string name="txt_buyer_homepage">当个买家</string>
    <string name="txt_purchase_homepage">当个代购</string>
    <string name="txt_popular">最受欢迎的搜素</string>
    <string name="txt_say_you_want">语音搜索</string>
    <string name="txt_user_avt">用户头像</string>
    <string name="txt_select_option"> 您最感兴趣的话题 (至少3个）</string>
    <string name="category_healthy_food"> 健康食品 </string>
    <string name="category_collection"> 收藏品 </string>
    <string name="category_other_items"> 其它物品 </string>
    <string name="category_bag"> 包包 </string>
    <string name="category_furniture"> 家具 </string>
    <string name="category_watch"> 手表 </string>
    <string name="category_clothing"> 服装 </string>
    <string name="category_electrical_appliances"> 电器 </string>
    <string name="category_jewelry"> 首饰 </string>
    <string name="category_sporting_goods"> 运动用品 </string>
    <string name="txt_all_category">全部分类</string>
    <string name="txt_all_country">全部国家</string>
    <string name="form_product_bid_none">出价</string>
    <string name="bt_no_ad">发不\n广告</string>
    <string name="form_product_bid">出价 (¥)</string>
    <string name="form_product_commodity_status">产品照片（选填)</string>
    <string name="form_product_commodity_status_one">产品照片</string>
    <string name="form_product_country_merchandise">产品所在国家</string>
    <string name="form_product_choice__delivery">买家选择的运送方式</string>
    <string name="form_product_delivery_quick_post">1. 快速邮递</string>
    <string name="form_product_delivery_ordinary_post">2. 普通邮递</string>
    <string name="form_product_advise_way_delivery">您建议的运送方式</string>
    <string name="form_product_shipping_method">选择运送方式</string>
    <string name="form_product_shipping_fee">运输费</string>
    <string name="form_product_estimated_delivery_time">预计送达时间</string>
    <string name="form_product_leave_message">产品详情</string>
    <string name="dialog_pick_image_choose_option">选择选项...</string>
    <string name="txt_no_mail_receive">没有收到确认邮件?.</string>
    <string name="suget_delivery_method">建议的运送方式</string>
    <string name="no_advesting">出价</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_address_payment">确认订单</string>
    <string name="form_address_default">默认地址</string>
    <string name="form_set_address_default">设定为默认地址</string>
    <string name="form_choose_country">国家</string>
    <string name="form_location_address">地址</string>
    <string name="form_province">省份</string>
    <string name="form_post_office_no">邮政编码</string>
    <string name="form_city">城市</string>
    <string name="form_ship_address">与收货地址</string>
    <string name="form_iput_new_address">添加新地址</string>
    <string name="title_duplicate">复制广告</string>
    <string name="title_request_purchase">求购广告详情</string>
    <string name="title_request_purchase_edit">更改广告</string>
    <string name="btn_save_request_purchase_edit">保存</string>
    <string name="title_request_purchase_duplicate">复制广告</string>
    <string name="form_product_name">产品名称</string>
    <string name="form_category_hint">产品分类</string>
    <string-array name="form_category_list">
        <item>全部分类</item>
        <item>电器</item>
        <item>家具</item>
        <item>服装</item>
        <item>首饰</item>
        <item>健康食品</item>
        <item>手表</item>
        <item>收藏品</item>
        <item>其它物品</item>
        <item>包包</item>
        <item>运动用品</item>
    </string-array>
    <string name="form_logistics_info">优先选择的物流方式</string>
    <string name="form_new">全新</string>
    <string name="form_used">二手</string>
    <string name="form_any_country">不限国家</string>
    <string name="form_country_product">当前所在国家</string>
    <string-array name="list_country_product">
        <item>全部国家</item>
        <item>中国</item>
        <item>加拿大</item>
        <item>印度尼西亚</item>
        <item>台湾地区</item>
        <item>德国</item>
        <item>意大利</item>
        <item>新加坡</item>
        <item>新西兰</item>
        <item>日本</item>
        <item>法国</item>
        <item>泰国</item>
        <item>澳大利亚</item>
        <item>澳门地区</item>
        <item>瑞士</item>
        <item>美国</item>
        <item>英国</item>
        <item>西班牙</item>
        <item>越南</item>
        <item>韩国</item>
        <item>香港地区</item>
        <item>马来西亚</item>
    </string-array>
    <string-array name="list_logic_info">
        <item>国内现货</item>
        <item>快速邮递</item>
        <item>普通邮递</item>
    </string-array>
    <string name="form_condition_product">产品状态</string>
    <string-array name="list_condition">
        <item>全新</item>
        <item>二手</item>
    </string-array>
    <string name="form_method_shipping">选择运送方式</string>
    <string-array name="list_method_shipping">
        <item>国内现货</item>
        <item>快速邮递</item>
        <item>普通邮递</item>
    </string-array>
    <string name="title_verify">实名认证</string>
    <string name="bt_ok">好的</string>
    <string name="bt_setup_account_verify">好的</string>
    <string name="bt_ok_verify">好的</string>
    <string name="bt_skip_verify">忽略这一步</string>
    <string name="verify_text_top">请上传您的身份证件验证来您的个人信息</string>
    <string name="verify_text_bot">请参照示范</string>
    <string name="sport_goods">运动用品</string>
    <string name="ad_limmit">广告会在%1$d 天后过期</string>
    <string name="date_limit_notification">%1$d天之后过期 </string>
    <string name="price_accept">买家已接受出价 ¥&#160;%1$s</string>
    <string name="hint_comment_product">有问题？来这里向买家提问！\n  （您的问题与买家的回复为公开可见)</string>
    <string name="bt_send">发送</string>
    <string name="title_my_collection">我的最爱的广告</string>
    <string name="title_my_global">通知</string>
    <string name="title_my_gen_favorite">我的收藏</string>
    <string name="bt_offer">还价</string>
    <string name="bt_cancle">拒绝</string>
    <string name="title_cancel_offer">请确认</string>
    <string name="content_cancel_offer">您确定要拒绝这出价吗?</string>
    <string name="bt_destroy">取消</string>
    <string name="bt_offer_currency">还价 (¥)</string>
    <string name="hint_counter_here">请在这里还价</string>
    <string name="hint_leave_mes_here">请在这里留言</string>
    <string name="hint_name_shipping_method">物流方式</string>
    <string name="hint_price_shipping_method">运输费</string>
    <string name="hint_arrival_day_shipping_method">预计送达时间</string>
    <string name="title_remarks_offer">留言</string>
    <string name="title_feed_back">请选下面其中一种类别的举报。</string>
    <string name="title_illegal_feed_back">非法产品</string>
    <string name="title_wrong_category_feed_back">错误的产品类别</string>
    <string name="title_duplicate_ads_feed_back">重复的广告</string>
    <string name="title_pornographic_products_feed_back">色情产品</string>
    <string name="title_provoke_feed_back">挑衅言论与行为</string>
    <string name="title_dialog_shipping_method">选择远送方式</string>
    <string name="title_select_shipping">远送方式</string>
    <string name="btn_checkout">去结账</string>
    <string name="btn_cancel_checkout">取消</string>
</resources>