<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_color_dialog"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp">

        <com.wo1haitao.controls.CustomTextViewFixSize
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"
            android:text="@string/hint_name_shipping_method"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp">

        <com.wo1haitao.controls.CustomTextViewFixSize
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hint_price_shipping_method"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:padding="5dp">

        <com.wo1haitao.controls.CustomTextViewFixSize
            android:id="@+id/tvDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"
            android:text="@string/hint_arrival_day_shipping_method"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />
    </FrameLayout>
</LinearLayout>