<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/profile_menu">

        <ImageView
            android:id="@+id/ib_back_action"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left|center"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back_bt_arrow"
            android:tint="@color/white" />

        <com.wo1haitao.controls.CustomTextViewFixSize
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="10"
            android:minHeight="@dimen/textSizeLarge"
            android:text="@string/title_cancel_offer"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/content_cancel_offer"
            android:textColor="@color/black" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.wo1haitao.controls.CustomTextViewFixSize
            android:id="@+id/tv_destroy_offer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_drable_profile_menu"
            android:clickable="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/bt_cancle"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />


        <com.wo1haitao.controls.CustomTextViewFixSize
            android:id="@+id/tv_cancel_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_drable_profile_menu"
            android:clickable="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/bt_destroy"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />
    </LinearLayout>
</LinearLayout>