<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_black"
        android:padding="10dp">

        <com.wo1haitao.controls.CustomTextViewFixSize
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_dialog_shipping_method"
            android:textColor="@color/white"
            android:textSize="@dimen/btnTextSizePx" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back_bt_arrow" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_color_dialog">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/dark_grey"
            android:gravity="center"
            android:orientation="vertical">

            <com.wo1haitao.controls.CustomTextViewFixSize
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/title_select_shipping"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sp_shipping_method"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_to_checkout"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btnHeight"
                    android:layout_weight="5"
                    android:background="@drawable/button_drable_dark"
                    android:text="@string/btn_checkout"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btnTextSize" />

                <Button
                    android:id="@+id/btn_cancel_offer"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btnHeight"
                    android:layout_weight="5"
                    android:background="@drawable/button_drable_dark"
                    android:text="@string/btn_cancel_checkout"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btnTextSize" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>


