<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/profile_menu">

        <ImageView
            android:id="@+id/ib_back_action"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left|center"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back_bt_arrow"
            android:tint="@color/white" />

        <com.wo1haitao.controls.CustomTextViewFixSize
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="10"
            android:minHeight="@dimen/textSizeLarge"
            android:text="@string/bt_offer"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.wo1haitao.controls.CustomTextViewFixSize
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_offer_currency"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <com.wo1haitao.controls.CustomEditextSoftkey
        android:id="@+id/couter_offer_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="top|left"
        android:hint="@string/hint_counter_here"
        android:inputType="numberDecimal"
        android:lines="1"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textColorHint="@color/grey_text"
        android:textSize="@dimen/textSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.wo1haitao.controls.CustomTextViewFixSize
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_remarks_offer"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <com.wo1haitao.controls.CustomEditextSoftkey
        android:id="@+id/remark_counter_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="top|left"
        android:hint="@string/hint_leave_mes_here"
        android:inputType="textMultiLine"
        android:lines="4"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textColorHint="@color/grey_text"
        android:textSize="@dimen/textSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.wo1haitao.controls.CustomTextViewFixSize
            android:id="@+id/tv_offer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_drable_profile_menu"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="@dimen/textSizeLarge"
            android:padding="15dp"
            android:text="@string/bt_offer"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />
    </LinearLayout>
</LinearLayout>